Sequence sound strip plays in cut area after moving below start frame. #40280

Closed
opened 2014-05-20 14:46:09 +02:00 by Vilem Duha · 6 comments
Member

System Information
Win 64 bit

Blender Version
Broken: blender-2.70-ba1acec-win64
Worked: (optional)

Short description of error
sequence sound strip plays in area after trim.

Exact steps for others to reproduce the error
when playing the sequence, after beginning, the strip plays sound even if it's active area is below 0 - it's edited end is below 0, but the original sound file is longer and it plays like it wouldn't be trimmed at all. The sound file is mp3, not sure if that matters.
Not sure how to explain this exactly, but the file should show clearly right after opening what I mean.

file:
bug_soundstrip.blend

**System Information** Win 64 bit **Blender Version** Broken: blender-2.70-ba1acec-win64 Worked: (optional) **Short description of error** sequence sound strip plays in area after trim. **Exact steps for others to reproduce the error** when playing the sequence, after beginning, the strip plays sound even if it's active area is below 0 - it's edited end is below 0, but the original sound file is longer and it plays like it wouldn't be trimmed at all. The sound file is mp3, not sure if that matters. Not sure how to explain this exactly, but the file should show clearly right after opening what I mean. file: [bug_soundstrip.blend](https://archive.blender.org/developer/F89509/bug_soundstrip.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VilemDuha

Added subscriber: @VilemDuha

Added subscriber: @mont29

Added subscriber: @mont29
Joerg Mueller was assigned by Bastien Montagne 2014-05-20 15:32:22 +02:00

This issue was referenced by 38fcc3e14b

This issue was referenced by 38fcc3e14b3b30cda4ec113822f83809592413b1
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 38fcc3e14b.

Closed by commit 38fcc3e14b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40280
No description provided.