source/blender/blenkernel/intern/sound.c
@@ -727,7 +727,7 @@ void sound_update_scene(Main *bmain, struct Scene *scene)
 
 					if (AUD_removeSet(scene->speaker_handles, strip->speaker_handle)) {
 						if (speaker->sound) {
-							AUD_moveSequence(strip->speaker_handle, (double)strip->start / FPS, -1, 0);
+							AUD_moveSequence(strip->speaker_handle, (double)strip->start / FPS, FLT_MAX, 0);
 						}
 						else {
 							AUD_removeSequence(scene->sound_scene, strip->speaker_handle);
@@ -738,7 +738,7 @@ void sound_update_scene(Main *bmain, struct Scene *scene)
 						if (speaker->sound) {
 							strip->speaker_handle = AUD_addSequence(scene->sound_scene,
 							                                        speaker->sound->playback_handle,
-							                                        (double)strip->start / FPS, -1, 0);
+							                                        (double)strip->start / FPS, FLT_MAX, 0);
 							AUD_setRelativeSequence(strip->speaker_handle, 0);
 						}
 					}
